[package]
name = "htmlize"
version = "0.5.1"
authors = ["Daniel Parks <oss-htmlize@demonhorse.org>"]
description = "Encode and decode HTML entities in UTF-8"
homepage = "https://github.com/danielparks/htmlize"
repository = "https://github.com/danielparks/htmlize"
readme = "README.md"
keywords = ["html"]
categories = ["web-programming", "encoding"]
license = "MIT OR Apache-2.0"
edition = "2018"

[build-dependencies]
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
serde_json = "1.0"

[dependencies]
phf = { version = "0.11.1", default-features = false }

[dev-dependencies]
assert2 = "0.3.7"
