[package]
name = "htmlize"
version = "1.0.0"
authors = ["Daniel Parks <oss-htmlize@demonhorse.org>"]
description = "Encode and decode HTML entities in UTF-8 according to the standard"
homepage = "https://github.com/danielparks/htmlize"
repository = "https://github.com/danielparks/htmlize"
readme = "README.md"
keywords = ["html", "entities", "escape", "unescape", "decode"]
categories = ["web-programming", "encoding"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"

[package.metadata.docs.rs]
features = ["unescape", "entities"]

[features]
default = []
unescape = ["entities", "_unescape_either"]
unescape_fast = ["_unescape_either", "dep:matchgen", "dep:serde_json"]
entities = ["dep:phf", "dep:phf_codegen", "dep:serde_json"]
# Enable iai benchmarks
iai = []
# Make internal functions like unescape_fast public for benchmarks.
bench = []
# Kludge to support `or` in required-features below
_unescape_either = []

[build-dependencies]
matchgen = { version = "0.1.0", optional = true }
phf = { version = "0.11.1", default-features = false, optional = true }
phf_codegen = { version = "0.11.1", optional = true }
serde_json = { version = "1.0", optional = true }

[dependencies]
memchr = "2.5.0"
paste = "1.0.11"
phf = { version = "0.11.1", default-features = false, optional = true }

[dev-dependencies]
assert2 = "0.3.7"
criterion = "0.4.0"
iai = "0.1.1"

[lib]
bench = false

[[bench]]
name = "escape_iai"
harness = false
required-features = ["iai"]

[[bench]]
name = "escape"
harness = false

[[bench]]
name = "unescape_iai"
harness = false
required-features = ["bench", "iai", "_unescape_either"]

[[bench]]
name = "unescape"
harness = false
required-features = ["bench", "_unescape_either"]
